Moved EDA to separate notebook

--- a/torch.ipynb
+++ b/torch.ipynb
@@ -2,26 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.12.1\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "\n",
-    "import plotly.express as px\n",
-    "import plotly.graph_objects as go\n",
-    "import plotly.figure_factory as ff\n",
-    "\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "import wandb\n",
     "import torch\n",
     "from torch import nn\n",
-    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "import wandb\n",
     "\n",
     "print(torch.__version__)\n",
     "print(torch.backends.mps.is_available())"
@@ -29,344 +29,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('data/pima-indians-diabetes-data.csv')\n",
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pregnancies</th>\n",
+       "      <th>Glucose</th>\n",
+       "      <th>BloodPressure</th>\n",
+       "      <th>SkinThickness</th>\n",
+       "      <th>Insulin</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>DiabetesPedigreeFunction</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Outcome</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>148.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>169.5</td>\n",
+       "      <td>33.6</td>\n",
+       "      <td>0.627</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>102.5</td>\n",
+       "      <td>26.6</td>\n",
+       "      <td>0.351</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>183.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>169.5</td>\n",
+       "      <td>23.3</td>\n",
+       "      <td>0.672</td>\n",
+       "      <td>32</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>28.1</td>\n",
+       "      <td>0.167</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>137.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>168.0</td>\n",
+       "      <td>43.1</td>\n",
+       "      <td>2.288</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>763</th>\n",
+       "      <td>10</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>32.9</td>\n",
+       "      <td>0.171</td>\n",
+       "      <td>63</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>764</th>\n",
+       "      <td>2</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>102.5</td>\n",
+       "      <td>36.8</td>\n",
+       "      <td>0.340</td>\n",
+       "      <td>27</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>765</th>\n",
+       "      <td>5</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>26.2</td>\n",
+       "      <td>0.245</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>766</th>\n",
+       "      <td>1</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>169.5</td>\n",
+       "      <td>30.1</td>\n",
+       "      <td>0.349</td>\n",
+       "      <td>47</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>767</th>\n",
+       "      <td>1</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>102.5</td>\n",
+       "      <td>30.4</td>\n",
+       "      <td>0.315</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>768 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Pregnancies  Glucose  BloodPressure  SkinThickness  Insulin   BMI  \\\n",
+       "0              6    148.0           72.0           35.0    169.5  33.6   \n",
+       "1              1     85.0           66.0           29.0    102.5  26.6   \n",
+       "2              8    183.0           64.0           32.0    169.5  23.3   \n",
+       "3              1     89.0           66.0           23.0     94.0  28.1   \n",
+       "4              0    137.0           40.0           35.0    168.0  43.1   \n",
+       "..           ...      ...            ...            ...      ...   ...   \n",
+       "763           10    101.0           76.0           48.0    180.0  32.9   \n",
+       "764            2    122.0           70.0           27.0    102.5  36.8   \n",
+       "765            5    121.0           72.0           23.0    112.0  26.2   \n",
+       "766            1    126.0           60.0           32.0    169.5  30.1   \n",
+       "767            1     93.0           70.0           31.0    102.5  30.4   \n",
+       "\n",
+       "     DiabetesPedigreeFunction  Age  Outcome  \n",
+       "0                       0.627   50        1  \n",
+       "1                       0.351   31        0  \n",
+       "2                       0.672   32        1  \n",
+       "3                       0.167   21        0  \n",
+       "4                       2.288   33        1  \n",
+       "..                        ...  ...      ...  \n",
+       "763                     0.171   63        0  \n",
+       "764                     0.340   27        0  \n",
+       "765                     0.245   30        0  \n",
+       "766                     0.349   47        1  \n",
+       "767                     0.315   23        0  \n",
+       "\n",
+       "[768 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "fig = go.Figure()\n",
-    "fig.add_bar(y=df.Outcome.value_counts(), x=['Healthy', 'Diabetic'], \n",
-    "            marker_color=['lightskyblue', 'indigo'])\n",
-    "fig.update_layout(title='Distribution of outcome')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "px.box(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "df[df[['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI', 'DiabetesPedigreeFunction', 'Age']].eq(0).any(axis=1)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI', 'DiabetesPedigreeFunction', 'Age']].agg(lambda x: x.eq(0).sum())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_zeroes = df.copy()\n",
-    "\n",
-    "df[['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI', 'DiabetesPedigreeFunction', 'Age']] = df[['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI', 'DiabetesPedigreeFunction', 'Age']].replace(0, np.nan)\n",
+    "df = pd.read_csv('Data/cleaned.csv', index_col=0)\n",
     "df"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Imputation of missing values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def find_median(data, var):\n",
-    "    temp = data[data[var].notnull()]\n",
-    "    temp = data[[var,'Outcome']].groupby('Outcome')[[var]].median().reset_index()\n",
-    "    \n",
-    "    return temp\n",
-    "\n",
-    "def create_distplot(data, var):\n",
-    "    hist = [data.loc[(data.Outcome == 0), var], data.loc[(data.Outcome == 1), var]]\n",
-    "\n",
-    "    fig = ff.create_distplot(hist, ['Healthy', 'Diabetes'], colors=['lightskyblue', 'indigo'], show_hist=True, bin_size=0, curve_type='kde')\n",
-    "    fig.update_layout(title=var)\n",
-    "\n",
-    "    return fig"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Glucose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "create_distplot(df_zeroes, 'Glucose').show()\n",
-    "\n",
-    "find_median(df, 'Glucose')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.loc[(df.Outcome == 0) & (df.Glucose.isnull()), 'Glucose'] = 107.0\n",
-    "df.loc[(df.Outcome == 1) & (df.Glucose.isnull()), 'Glucose'] = 140.0\n",
-    "\n",
-    "create_distplot(df, 'Glucose')"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### BloodPressure"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "create_distplot(df_zeroes, 'BloodPressure').show()\n",
-    "\n",
-    "find_median(df, 'BloodPressure')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.loc[(df.Outcome == 0) & (df.BloodPressure.isnull()), 'BloodPressure'] = 70.0\n",
-    "df.loc[(df.Outcome == 1) & (df.BloodPressure.isnull()), 'BloodPressure'] = 74.5\n",
-    "\n",
-    "create_distplot(df, 'BloodPressure')"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### SkinThickness"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "create_distplot(df_zeroes, 'SkinThickness').show()\n",
-    "\n",
-    "find_median(df, 'SkinThickness')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.loc[(df.Outcome == 0) & (df.SkinThickness.isnull()), 'SkinThickness'] = 27.0\n",
-    "df.loc[(df.Outcome == 1) & (df.SkinThickness.isnull()), 'SkinThickness'] = 32.0\n",
-    "\n",
-    "create_distplot(df, 'SkinThickness')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Insulin"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "create_distplot(df_zeroes, 'Insulin').show()\n",
-    "\n",
-    "find_median(df, 'Insulin')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.loc[(df.Outcome == 0) & (df.Insulin.isnull()), 'Insulin'] = 102.5\n",
-    "df.loc[(df.Outcome == 1) & (df.Insulin.isnull()), 'Insulin'] = 169.5\n",
-    "\n",
-    "create_distplot(df, 'Insulin')"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### BMI"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "create_distplot(df_zeroes, 'BMI').show()\n",
-    "\n",
-    "find_median(df, 'BMI')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.loc[(df.Outcome == 0) & (df.BMI.isnull()), 'BMI'] = 30.1\n",
-    "df.loc[(df.Outcome == 1) & (df.BMI.isnull()), 'BMI'] = 34.3\n",
-    "\n",
-    "create_distplot(df, 'BMI')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI', 'DiabetesPedigreeFunction', 'Age']].agg(lambda x: x.isna().sum())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "px.box(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = go.Figure()\n",
-    "fig.add_heatmap(z=df.corr().round(4), x=df.columns, y=df.columns,\n",
-    "                text=df.corr().round(4),\n",
-    "                texttemplate=\"%{text}\",\n",
-    "                colorscale=px.colors.diverging.RdBu,\n",
-    "                zmin=-1, zmax=1)\n",
-    "fig.update_layout(width=1000, height=1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_scatter(data, var1, var2):\n",
-    "    plot1 = [data.loc[(data.Outcome == 0), var1], data.loc[(data.Outcome == 1), var1]]\n",
-    "    plot2 = [data.loc[(data.Outcome == 0), var2], data.loc[(data.Outcome == 1), var2]]\n",
-    "\n",
-    "    fig = go.Figure()\n",
-    "\n",
-    "    fig.add_scatter(x=plot1[0], y=plot2[0], mode='markers', marker_color='lightskyblue', name='Healthy')\n",
-    "    fig.add_scatter(x=plot1[1], y=plot2[1], mode='markers', marker_color='indigo', name='Diabetic')\n",
-    "\n",
-    "    fig.update_layout(width=1000, height=600,\n",
-    "                      title=f'Scatter of {var1} and {var2}',\n",
-    "                      xaxis_title=var1,\n",
-    "                      yaxis_title=var2)\n",
-    "    \n",
-    "    return fig"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "create_scatter(df, 'Glucose', 'Insulin')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "create_scatter(df, 'Pregnancies', 'Age')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "create_scatter(df, 'BMI', 'SkinThickness')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "create_scatter(df, 'Glucose', 'Outcome')"
    ]
   },
   {
