--- a/tensorflow.ipynb
+++ b/tensorflow.ipynb
@@ -448,15 +448,16 @@
         "\n",
         "Link to wandb report: https://api.wandb.ai/links/nsiete-hrnciar-katkovcin/9v9fld5d\n",
         "\n",
-        "1. **Bigger net** `lr-scheduler-adam-bce-cos-deeper)` - \n",
+        "1. **Bigger net, LearningRateScheduler with cos annealing strategy** `lr-scheduler-adam-bce-cos-deeper)` - This refers to a neural network with four layers: an input layer with 8 neurons, two hidden layers with 16 and 8 neurons, respectively, and an output layer with 1 neuron. The ReLU activation function is used on all layers except for the output layer, which uses the Sigmoid activation function. The BCELoss loss function is used with the Adam optimizer and the LearningRateScheduler scheduler with a cosinus annealing strategy. However, this neural network suffers from overfitting, which is indicated by the validation loss diverging from the training loss. This means that while the training loss is decreasing and the training accuracy is increasing, the validation loss is increasing and the validation accuracy is decreasing.\n",
         "\n",
-        "2. **No scheduler with learning rate 0.01** `(lr-0.01-adam-bce)` - \n",
         "\n",
-        "3. **No scheduler with learning rate 0.001** `(lr-0.001-adam-bce-cos2)` - \n",
+        "2. **LearningRateScheduler scheduler with _cos_ annealing strategy** `(lr-scheduler-adam-bce)` - This describes a neural network with three layers: an input layer with 8 neurons, a hidden layer with 4 neurons, and an output layer with 1 neuron. The activation function, loss function, and optimizer are the same as the previous network. The scheduler is also the same (LEatningRateScheduler) with cos annealing strategy. Despite being smaller in size, this neural network did not suffer from overfitting. However, its training accuracy was lower at 87% and validation accuracy 84% and its loss was higher compared to the previous network.\n",
         "\n",
-        "4. **LearningRateScheduler scheduler with _cos_ annealing strategy** `(lr-scheduler-adam-bce)`  \n",
+        "3. **LearningRateScheduler scheduler with _linear_ annealing strategy** `(lr-scheduler-adam-bce-linear)` - The network utilized the LearningRateScheduler scheduler with a linear annealing strategy, and it produced slightly improved results compared to using the cos strategy. The training accuracy was 88% and validation accuracy was 86%, and it did not suffer from overfitting, but the loss was higher than in the previous experiment.\n",
         "\n",
-        "5. **LearningRateScheduler scheduler with _linear_ annealing strategy** `(lr-scheduler-adam-bce-linear)` - \n"
+        "4. **No scheduler with learning rate 0.01 with cos annealing strategy** `(lr-0.01-adam-bce)` - The same network was used without the scheduler, resulting in higher loss and the training accuracy was 89% and validation accuracy 80%. This mean there was an overfitting. This could be due to a small learning rate and step, which significantly increased the training time, and the network may have been stuck in a local minimum. Alternatively, it may not have had enough time or epochs to converge to a good enough result.\n",
+        "\n",
+        "5. **No scheduler with learning rate 0.001 with cos annealing strategy** `(lr-0.001-adam-bce-cos2)` - The parameters used were the same as in the previous experiment, except for a higher learning rate. The network was able to converge to a better result in this case, with a validation accuracy of 84% and training accuracy at 87%. However, this resulted in overfitting, as indicated by the diverging losses.\n"
       ]
     },
     {
